--- a/_includes/post-list.html
+++ b/_includes/post-list.html
@@ -5,9 +5,9 @@
         <li class="item  item--post">
           <article class="article  article--post">
 
-            <h2><a href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a></h2>
-            {% include post-meta.html %}
-            {{ page.excerpt | markdownify | truncatewords: 60 }}
+            <h3><a href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a></h3>
+            <!-- {% include post-meta.html %}
+            {{ page.excerpt | markdownify | truncatewords: 60 }} -->
 
           </article>
         </li>
@@ -22,7 +22,7 @@
         <li class="item  item--post">
           <article class="article  article--post">
 
-            <h2><a href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a></h2>
+            <h3><a href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a></h3>
             {% include post-meta.html %}
             {{ page.excerpt | markdownify | truncatewords: 60 }}
 
